--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,3 +33,5 @@ target_sources(${PROJECT_NAME} PRIVATE AssembleDoubleWord.cpp)
 target_sources(${PROJECT_NAME} PRIVATE AssembleDisassembleCommonFunctions.cpp)
 target_sources(${PROJECT_NAME} PRIVATE DisassembleSingleword.cpp)
 target_sources(${PROJECT_NAME} PRIVATE AssemblerLabels.cpp)
+target_sources(${PROJECT_NAME} PRIVATE DisassemblerFileWriter.cpp)
+target_sources(${PROJECT_NAME} PRIVATE DisassemblerHexFileParser.cpp)
